* bb - Search BestBuy (from Glenn Carr)
* lipsum - Generate Lorem Ipsum text (from Glenn Carr)
* amo - Search Amo's Online Crossword Dictionary (from Matthew McDougal)
* jsenc - url encrypt/decrypt strings and optionally generate encoded mailto strings to hide from email harvesters (from Brent Beardsley)
* passgen - password generator (from Brent Beardsley)

Modified Searches

* amaz - added domain switch to search either amaz. com de uk jp ca or fr (from Wolfgang Deutsch)
* sf - added exact and foundry switches for requiring all words and going to a foundry page (from Brent Beardsley)
* tinyurl - changed example so it wouldn't wrap
* mac - added help display if a question mark or no args are specified
* rgb - added ability to accept hex numbers and decimal numbers separated with non-digits, display hsl in the output
* md5 - select the generated md5 hash
* gg - added /froogle, /glossary, and /keys

Bug Fixes

* Depending on the configured editor, spaces in the config file path would cause problems.  Fix by quoting filename.
* Fix from Gregg Tavares for "[ 643945 ] Does not run in Japanese Windows":
  http://sourceforge.net/tracker/index.php?func=detail&aid=643945&group_id=42081&atid=432066
* Fixed google search with 'mode' qualifers and no search string to go the home page for that mode (news, groups, etc.)


-- What's new for 3.1.4.4 beta (October 24, 2002)

New Searches

* fandango - Find movie information, listings, and buy tickets online (from Nikolai Devereaux)

Modified Searches

* php - fix problem with spaces in URL (from Nikolai Devereaux)
* sf - add "/list" for jumping to a SourceForge hosted list info/admin page (from Glenn Carr)

Bug Fixes

* Popup menu fix - 'Configure' was showing up in the list of search categories


-- What's new for 3.1.4.3 beta (October 23, 2002)

New aliases

* dhr and w3r, from Glenn Carr and Will Dean

New Searches

* cheapcd - Buy Cheap CDs Online at Wholesale Cost, $5 under Retail (from Steven J. Heil)